# serializer version: 1
# name: test_switch[2][switch.cms_sf2000_allow_grid_charging-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.cms_sf2000_allow_grid_charging',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Allow grid charging',
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Allow grid charging',
    'platform': 'indevolt',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'grid_charging',
    'unique_id': 'SolidFlex2000-87654321_grid_charging',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[2][switch.cms_sf2000_allow_grid_charging-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'CMS-SF2000 Allow grid charging',
    }),
    'context': <ANY>,
    'entity_id': 'switch.cms_sf2000_allow_grid_charging',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch[2][switch.cms_sf2000_bypass_socket-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.cms_sf2000_bypass_socket',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Bypass socket',
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Bypass socket',
    'platform': 'indevolt',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'bypass',
    'unique_id': 'SolidFlex2000-87654321_bypass',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[2][switch.cms_sf2000_bypass_socket-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'CMS-SF2000 Bypass socket',
    }),
    'context': <ANY>,
    'entity_id': 'switch.cms_sf2000_bypass_socket',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch[2][switch.cms_sf2000_led_indicator-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.cms_sf2000_led_indicator',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'LED indicator',
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'LED indicator',
    'platform': 'indevolt',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'light',
    'unique_id': 'SolidFlex2000-87654321_light',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[2][switch.cms_sf2000_led_indicator-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'switch',
      'friendly_name': 'CMS-SF2000 LED indicator',
    }),
    'context': <ANY>,
    'entity_id': 'switch.cms_sf2000_led_indicator',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
